--- a/guides/index.html
+++ b/guides/index.html
@@ -130,6 +130,12 @@
         url: "winrarguide/"
       },
       {
+        title: "Modrinth Guide",
+        description: "Shows how to install modrinth and install modpacks for our servers.",
+        image: "images/ModrinthGuideTHUMBNAIL.png",
+        url: "modrinthguide/"
+      },
+      {
         title: "Clipping Gameplay",
         description: "This guide shows you how to clip your own gameplay with OBS, better than alternatives like medal.",
         image: "images/OBSClippingTHUMBNAIL.png",
