--- a/guides/obsclipping/index.html
+++ b/guides/obsclipping/index.html
@@ -191,7 +191,7 @@ Start at 18, best option for clipping. Go higher if your system cannot handle.</
 
 <div class="next-section">
   <p>Next, check out:</p>
-  <a href="../CompressingVideos/" class="next-button">Guide: Compressing Videos</a>
+  <a href="../compressingvideos/" class="next-button">Guide: Compressing Videos</a>
 </div>
 
 
