--- a/servers/index.html
+++ b/servers/index.html
@@ -119,8 +119,12 @@
         <span class="info-icon" data-tooltip="Download Modrinth to install the modpack (guide in guides). *Default RAM: 8GB (adjust if needed) **DO NOT update any mods.">ⓘ</span>
       </div>
       <small class="server-ip">IP Address: 68.204.100.3:25566</small>
-      <small class="server-version">Version: 1.21.5 Modded</small>
-    </div>
+      <small class="server-version">
+        Version: 1.21.5 Modded
+        &nbsp;•&nbsp;
+        <a href="https://www.mediafire.com/file/pay98dnrw7q7vfa/modservr_1.0.0.mrpack/file" download style="color: #00bfff; text-decoration: underline;">Download Modpack</a>
+      </small>
+        </div>
         <!-- ROBLOX Blank Server -->
     <div class="server-box" data-server="blank">
       <div class="server-header">
