--- a/servers/index.html
+++ b/servers/index.html
@@ -108,7 +108,7 @@
         <p>Minecraft Main Server</p>
         <span class="info-icon" data-tooltip="Main MC server - Vanilla 1.21.5">ⓘ</span>
       </div>
-      <small class="server-ip">IP Address: 68.204.100.3</small>
+      <small class="server-ip">IP Address: everybodylovesnj.duckdns.org:25565  (68.204.100.3)</small>
       <small class="server-version">Version: 1.21.5 Vanilla</small>
     </div>
 
@@ -118,7 +118,7 @@
         <p>Minecraft Modded Server</p>
         <span class="info-icon" data-tooltip="Download Modrinth to install the modpack (guide in guides). *Default RAM: 8GB (adjust if needed) **DO NOT update any mods.">ⓘ</span>
       </div>
-      <small class="server-ip">IP Address: 68.204.100.3:25566</small>
+      <small class="server-ip">IP Address: everybodylovesnj.duckdns.org:25566 (68.204.100.3:25566)</small>
       <small class="server-version">
         Version: 1.21.5 Modded
         &nbsp;•&nbsp;
