--- a/clips/index.html
+++ b/clips/index.html
@@ -139,6 +139,14 @@
       game: "Roblox"
     },
     {
+      name: "if I hear that shit again",
+      url: "https://file.garden/aCqlDv1ELCRFgQBY/clips/if%20I%20hear%20that%20shit%20again.mp4",
+      duration: "0:14",
+      size: "30.5 MB",
+      author: "nj",
+      game: "VRChat"
+    },
+    {
       name: "Project X - Replay 2025-05-20 22-17-02",
       url: "https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-20%2022-17-02.mp4",
       duration: "0:17",
