--- a/clips/index.html
+++ b/clips/index.html
@@ -146,6 +146,14 @@
       author: "nj",
       game: "VRChat"
     },
+        {
+      name: "ima need both of yall to fuck off",
+      url: "https://file.garden/aCqlDv1ELCRFgQBY/clips/ima%20need%20both%20of%20yall%20to%20fuck%20off.mp4",
+      duration: "0:24",
+      size: "59.6 MB",
+      author: "nj",
+      game: "VRChat"
+    },
     {
       name: "Project X - Replay 2025-05-20 22-17-02",
       url: "https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-05-20%2022-17-02.mp4",
