--- a/servers/index.html
+++ b/servers/index.html
@@ -14,47 +14,85 @@
     }
 
     .page-title {
-      font-size: 24px;
+      font-size: 28px;
       padding: 20px;
       border-bottom: 1px solid #2c2c2c;
       margin-bottom: 0;
+      text-align: center;
+    }
+
+    /* Search Bar Styling */
+    .search-container {
+      display: flex;
+      justify-content: center;
+      padding: 16px;
+      background-color: #121212;
+    }
+
+    .search-bar {
+      padding: 12px 18px;
+      background-color: #1c1c1c;
+      border: 1px solid #2c2c2c;
+      color: white;
+      font-size: 16px;
+      width: 60%;
+      max-width: 500px;
+      border-radius: 25px;
+      outline: none;
+      transition: all 0.2s ease;
+    }
+    .search-bar::placeholder {
+      color: #888;
+    }
+    .search-bar:focus {
+      border-color: #00bfff;
+      box-shadow: 0 0 6px #00bfff66;
     }
 
     .container {
       padding: 20px;
       display: flex;
       flex-direction: column;
-      gap: 16px;
+      gap: 24px;
     }
 
     .status-message {
       color: #aaa;
-      font-size: 13px;
+      font-size: 14px;
       margin-bottom: 10px;
       display: block;
+      text-align: center;
     }
 
     .server-box {
-      background-color: #2a2a2a;
-      border-radius: 10px;
-      padding: 16px;
-      display: flex;
-      flex-direction: column;
-      border: 1.5px solid #444;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.7);
+      background-color: #1c1c1c;
+      border-radius: 12px;
+      padding: 20px;
+      border: 1.5px solid #333;
+      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.6);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .server-box:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.8);
     }
 
     .server-header {
       display: flex;
       align-items: center;
-      gap: 8px;
-      margin-bottom: 4px;
+      gap: 10px;
+      margin-bottom: 6px;
     }
-
+    .server-header img {
+      width: 24px;
+      height: 24px;
+      border-radius: 4px;
+      object-fit: cover;
+    }
     .server-header p {
       font-weight: bold;
       margin: 0;
-      font-size: 16px;
+      font-size: 18px;
     }
 
     .info-icon {
@@ -64,76 +102,118 @@
       user-select: none;
       position: relative;
     }
+    .info-icon:hover::after {
+      content: attr(data-tooltip);
+      position: absolute;
+      left: 150%;
+      top: 50%;
+      transform: translateY(-50%);
+      white-space: pre-wrap;
+      background-color: #1e1e1e;
+      color: #ccc;
+      padding: 12px 16px;
+      border-radius: 8px;
+      font-size: 14px;
+      line-height: 1.5;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
+      max-width: 700px;
+      min-width: 150px;
+      box-sizing: border-box;
+      z-index: 10;
+      pointer-events: none;
+      overflow-wrap: break-word;
+    }
 
-    /* Tooltip styling */
-.info-icon:hover::after {
-  content: attr(data-tooltip);
-  position: absolute;
-  left: 150%;
-  top: 50%;
-  transform: translateY(-50%);
-  white-space: pre-wrap;           /* allow multiline and wrapping */
-  background-color: #1e1e1e;
-  color: #ccc;
-  padding: 12px 16px;
-  border-radius: 8px;
-  font-size: 14px;
-  line-height: 1.5;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
-  max-width: 700px;                /* max width allowed */
-  width: max-content;              /* natural width based on content */
-  min-width: 150px;
-  box-sizing: border-box;          /* include padding in width */
-  z-index: 10;
-  pointer-events: none;
-  overflow-wrap: break-word;       /* break long words */
-  word-break: break-word;
-  user-select: text;
-}
-
-
-
+    .box-link {
+      color: #00bfff;
+      text-decoration: underline;
+      display: inline-block;
+      margin-top: 6px;
+    }
+    .box-link:hover {
+      color: #66dfff;
+    }
   </style>
 </head>
 <body>
-  <h1 class="page-title">Servers</h1>
+  <h1 class="page-title">Servers & Downloads</h1>
+
+  <!-- Search bar container -->
+  <div class="search-container">
+    <input
+      type="text"
+      id="searchInput"
+      class="search-bar"
+      placeholder="Search servers, modpacks, and links..."
+    />
+  </div>
+
   <div class="container">
     <small id="status-message" class="status-message">
-      These are the game servers we play on and their codes/ips.
+      These are the servers we play on and some useful downloads.
     </small>
 
-    <!-- Main Server -->
-    <div class="server-box" data-server="68.204.100.3">
+    <!-- Minecraft Main Server -->
+    <div class="server-box">
       <div class="server-header">
+        <img src="images/Minecraft.png" alt="Minecraft">
         <p>Minecraft Main Server</p>
         <span class="info-icon" data-tooltip="Main MC server - Vanilla 1.21.5">ⓘ</span>
       </div>
-      <small class="server-ip">IP Address: <b>everybodylovesnj.duckdns.org:25565</b>  (68.204.100.3)</small>
-      <small class="server-version">Version: 1.21.4 Vanilla</small>
+      <small>IP Address: <b>everybodylovesnj.duckdns.org:25565</b></small><br>
+      <small>Version: 1.21.4 Vanilla</small>
     </div>
 
-    <!-- Modded Server -->
-    <div class="server-box" data-server="68.204.100.3:25566">
+    <!-- Minecraft Modded Server -->
+    <div class="server-box">
       <div class="server-header">
+        <img src="images/modrinth.png" alt="Minecraft Modded">
         <p>Minecraft Modded Server</p>
-        <span class="info-icon" data-tooltip="Download Modrinth to install the modpack (guide in guides). *Default RAM: 8GB (adjust if needed) **DO NOT update any mods.">ⓘ</span>
+        <span class="info-icon" data-tooltip="Download Modrinth to install the modpack. Default RAM: 8GB. Do not update mods.">ⓘ</span>
       </div>
-      <small class="server-ip">IP Address: <b>everybodylovesnj.duckdns.org:25566</b> (68.204.100.3:25566)</small>
-      <small class="server-version">
+      <small>IP Address: <b>everybodylovesnj.duckdns.org:25566</b></small><br>
+      <small>
         Version: 1.21.5 Modded
         &nbsp;•&nbsp;
-        <a href="https://www.mediafire.com/file/pay98dnrw7q7vfa/modservr_1.0.0.mrpack/file" download style="color: #00bfff; text-decoration: underline;">Download Modpack</a>
+        <a href="https://www.mediafire.com/file/pay98dnrw7q7vfa/modservr_1.0.0.mrpack/file" class="box-link" download>Download Modpack</a>
       </small>
-        </div>
-        <!-- ROBLOX Blank Server -->
-    <div class="server-box" data-server="blank">
+    </div>
+
+    <!-- Roblox Server -->
+    <div class="server-box">
       <div class="server-header">
-        <p>ROBLOX game server</p>
+        <img src="images/roblox.png" alt="Roblox">
+        <p>ROBLOX Game Server</p>
         <span class="info-icon" data-tooltip="Roblox game server name">ⓘ</span>
       </div>
-      <small class="server-ip">Server Code: blank</small>
-      <small class="server-version"></small>
+      <small>Server Code: blank</small>
     </div>
-  </div>
+
+    <!-- GMod Modpack -->
+    <div class="server-box">
+      <div class="server-header">
+        <img src="images/gmod.png" alt="GMod">
+        <p>Garry's Mod Modpack</p>
+        <span class="info-icon" data-tooltip="Our curated Steam Workshop collection for Garry's Mod">ⓘ</span>
+      </div>
+      <small>Type: Steam Workshop Collection</small><br>
+      <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3472224462" target="_blank" class="box-link">View on Steam</a>
+    </div>
+
+  <script>
+    document.getElementById("searchInput").addEventListener("input", function() {
+      const filter = this.value.toLowerCase();
+      const boxes = document.querySelectorAll(".server-box");
+
+      boxes.forEach(box => {
+        const title = box.querySelector(".server-header p").textContent.toLowerCase();
+        if (title.includes(filter)) {
+          box.style.display = "";
+        } else {
+          box.style.display = "none";
+        }
+      });
+    });
+  </script>
 </body>
 </html>
