--- a/servers/index.html
+++ b/servers/index.html
@@ -136,7 +136,7 @@
   </style>
 </head>
 <body>
-  <h1 class="page-title">Servers & Downloads</h1>
+  <h1 class="page-title">Servers</h1>
 
   <!-- Search bar container -->
   <div class="search-container">
@@ -150,7 +150,7 @@
 
   <div class="container">
     <small id="status-message" class="status-message">
-      These are the servers we play on and some useful downloads.
+      Servers and downloads and stuff.
     </small>
 
     <!-- Minecraft Main Server -->
@@ -217,3 +217,4 @@
   </script>
 </body>
 </html>
+
