--- a/servers/index.html
+++ b/servers/index.html
@@ -147,7 +147,12 @@
       placeholder="Search servers, modpacks, and links..."
     />
   </div>
-
+  
+  <div class="container">
+    <small id="status-message" class="status-message">
+      
+    </small>
+    
     <!-- Minecraft Main Server -->
     <div class="server-box">
       <div class="server-header">
@@ -212,5 +217,6 @@
   </script>
 </body>
 </html>
+
 
 
