--- a/servers/index.html
+++ b/servers/index.html
@@ -192,7 +192,7 @@
       <div class="server-header">
         <img src="images/gmod.png" alt="GMod">
         <p>Garry's Mod Modpack</p>
-        <span class="info-icon" data-tooltip="Our curated Steam Workshop collection for Garry's Mod">ⓘ</span>
+        <span class="info-icon" data-tooltip="Steam Workshop collection for Garry's Mod">ⓘ</span>
       </div>
       <small>Type: Steam Workshop Collection</small><br>
       <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3472224462" target="_blank" class="box-link">View on Steam</a>
@@ -215,6 +215,7 @@
   </script>
 </body>
 </html>
+
 
 
 
