--- a/servers/index.html
+++ b/servers/index.html
@@ -149,6 +149,7 @@
   </div>
   
   <div class="container">
+    
     </small>
     
     <!-- Minecraft Main Server -->
@@ -187,12 +188,27 @@
       <small>Server Code: blank</small>
     </div>
 
+    <!-- GMod Server -->
+    <div class="server-box">
+      <div class="server-header">
+        <img src="images/gmod.png" alt="GMod">
+        <p>GMod Server</p>
+        <span class="info-icon" data-tooltip="Must download the collection, when downloading make sure to overwrite every time.">ⓘ</span>
+      </div>
+      <small>Server Connect Link: <b>steam://connect/68.204.100.3:27015</b></small><br>
+      <small>
+        Version: Latest Modded
+        &nbsp;•&nbsp;
+        <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3472224462" class="box-link" download>Collection</a>
+      </small>
+    </div>
+
     <!-- GMod Modpack -->
     <div class="server-box">
       <div class="server-header">
         <img src="images/gmod.png" alt="GMod">
         <p>Garry's Mod Modpack</p>
-        <span class="info-icon" data-tooltip="Steam Workshop collection for Garry's Mod">ⓘ</span>
+        <span class="info-icon" data-tooltip="Our curated Steam Workshop collection for Garry's Mod">ⓘ</span>
       </div>
       <small>Type: Steam Workshop Collection</small><br>
       <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3472224462" target="_blank" class="box-link">View on Steam</a>
@@ -215,8 +231,5 @@
   </script>
 </body>
 </html>
-
-
-
 
 
