--- a/clips/index.html
+++ b/clips/index.html
@@ -138,6 +138,14 @@
       author: "nj",
       game: "Roblox"
     },
+        {
+      name: "Replay 2025-08-04 19-31-18",
+      url: "https://file.garden/aCqlDv1ELCRFgQBY/clips/Replay%202025-08-04%2019-31-18.mp4",
+      duration: "0:28",
+      size: "65.1 MB",
+      author: "nj",
+      game: "Roblox"
+    },
     {
       name: "if I hear that shit again",
       url: "https://file.garden/aCqlDv1ELCRFgQBY/clips/if%20I%20hear%20that%20shit%20again.mp4",
